src/test/deca/syntax/valid/created/avec_objet/asm_method.deca
// Règles attendues (occurences dans lignes du fichier résultat):
//
// Auteur: Eliott
//
// Historique:
//    cree le 22/01/2024
//
// Description:
//    test de programme syntaxiquement correct.

class A {
    int method(int a) 
        asm ("zefinzefon");
}