src/test/deca/syntax/invalid/created/sans_objet/while_not_closed.deca
// Résultat erreur:
//    17:1
//
// Description:
//    Tests de programme incorrect contextuellement 
//
// Auteur:
//    Eliott
//
// Historique:
//    Créé le 22/01/2024

{
    int a = 5;
    while (a) {
    
}